# spawn

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
crates/spawn-asset/: Cargo.toml  DESIGN.md  README.md
crates/spawn-asset/src/: error.rs  handle.rs  id.rs  lib.rs  loader.rs  watch.rs
crates/spawn-asset/src/server/: mod.rs  pool.rs  registry.rs
crates/spawn-asset/tests/: integration.rs
crates/spawn-audio/: Cargo.toml  DESIGN.md  README.md
crates/spawn-audio/src/: bus.rs  engine.rs  error.rs  handle.rs  lib.rs  params.rs  source.rs  spatial.rs
crates/spawn-audio/src/backend/: kira.rs  mod.rs  null.rs
crates/spawn-audio/tests/: allocation.rs  device.rs  loader.rs  null_backend.rs
crates/spawn-build/: Cargo.toml  DESIGN.md  README.md
crates/spawn-build/src/: cache.rs  compile.rs  discover.rs  error.rs  glob.rs  hash.rs  lib.rs  manifest.rs  pack.rs  pipeline.rs
crates/spawn-build/tests/: pipeline.rs
crates/spawn-core/: Cargo.toml  DESIGN.md  README.md
crates/spawn-core/src/: error.rs  lib.rs  traits.rs
crates/spawn-core/src/math/: mat3.rs  mat4.rs  mod.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
crates/spawn-core/src/primitives/: aabb.rs  color.rs  mod.rs  rect.rs  transform.rs
crates/spawn-debug/: Cargo.toml  DESIGN.md  README.md
crates/spawn-debug/src/: error.rs  lib.rs  metrics.rs  overlay.rs
crates/spawn-debug/src/log/: macros.rs  mod.rs  sinks.rs
crates/spawn-debug/src/profile/: mod.rs  report.rs  scope.rs  stats.rs
crates/spawn-debug/tests/: compile_floor.rs  logger_global.rs  profiler_zero_alloc.rs
crates/spawn-ecs/: Cargo.toml  DESIGN.md  README.md
crates/spawn-ecs/src/: archetype.rs  bundle.rs  change.rs  commands.rs  component.rs  entity.rs  error.rs  events.rs  hierarchy.rs  lib.rs  reflect.rs  resource.rs  schedule.rs  serialize.rs  system.rs  world.rs
crates/spawn-ecs/src/query/: filter.rs  mod.rs  tuples.rs
crates/spawn-ecs/tests/: change_detection.rs  change_no_alloc.rs  events.rs  events_no_alloc.rs  hierarchy.rs  integration.rs  no_alloc.rs  resource_no_alloc.rs  resources.rs  scheduler.rs  serialization.rs
crates/spawn-editor/: Cargo.toml  DESIGN.md  README.md
crates/spawn-editor-shell/: Cargo.toml  DESIGN.md
crates/spawn-editor-shell/examples/: editor.rs
crates/spawn-editor-shell/src/: app.rs  bridge.rs  camera.rs  error.rs  gizmo.rs  inspector.rs  lib.rs  outliner.rs  overlay.rs  panels.rs  picking.rs  playmode.rs  scene.rs  status.rs  theme.rs  toolbar.rs  util.rs
crates/spawn-editor-shell/tests/: device.rs
crates/spawn-editor/src/: error.rs  gizmo.rs  lib.rs  selection.rs  stack.rs  state.rs  transaction.rs
crates/spawn-editor/src/command/: builtin.rs  mod.rs
crates/spawn-engine/: Cargo.toml  DESIGN.md
crates/spawn-engine/examples/: headless.rs  windowed.rs
crates/spawn-engine/src/: app.rs  asset.rs  audio.rs  config.rs  engine.rs  error.rs  frame.rs  input.rs  lib.rs  observability.rs  render.rs  time.rs  ui.rs
crates/spawn-engine/tests/: asset_reload.rs  audio_commands.rs  fixed_timestep.rs  frame_loop.rs  input_frame.rs  no_alloc.rs  observability.rs  render_thread.rs  sync_mode.rs  ui_overlay.rs
crates/spawn-input/: Cargo.toml  DESIGN.md  README.md
crates/spawn-input/src/: action.rs  binding.rs  context.rs  error.rs  lib.rs  map.rs
crates/spawn-input/src/state/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs  touch.rs
crates/spawn-input/tests/: zero_alloc.rs
crates/spawn-net/: Cargo.toml  DESIGN.md  README.md
crates/spawn-net/src/: ack.rs  channel.rs  client.rs  connection.rs  error.rs  event.rs  frag.rs  lib.rs  protocol.rs  sequence.rs  server.rs  stats.rs
crates/spawn-net/tests/: loopback.rs
crates/spawn-physics/: Cargo.toml  DESIGN.md  README.md
crates/spawn-physics/src/: error.rs  handles.rs  lib.rs  math.rs  shared.rs
crates/spawn-physics/src/ecs/: components.rs  mod.rs  systems.rs  systems2d.rs
crates/spawn-physics/src/physics2d/: body.rs  collider.rs  convert.rs  joint.rs  mod.rs  query.rs  world.rs
crates/spawn-physics/src/physics3d/: body.rs  collider.rs  convert.rs  joint.rs  mod.rs  query.rs  world.rs
crates/spawn-physics/tests/: parity.rs
crates/spawn-platform/: Cargo.toml  DESIGN.md  README.md
crates/spawn-platform/src/: app.rs  error.rs  lib.rs  monitor.rs  window.rs
crates/spawn-platform/src/event/: keyboard.rs  mod.rs  mouse.rs  touch.rs
crates/spawn-render/: Cargo.toml  DESIGN.md  README.md
crates/spawn-render/examples/: gpuinfo.rs
crates/spawn-render/src/: animation.rs  asset_handle.rs  camera.rs  error.rs  format.rs  frame.rs  gpu_test.rs  graph.rs  lib.rs  light.rs  material.rs  mesh.rs  pipeline.rs  renderer.rs  resources.rs  shaders.rs  skeleton.rs  text.rs  texture.rs
crates/spawn-render/src/passes/: forward_lit.rs  forward_opaque.rs  forward_pbr.rs  mod.rs  overlay.rs  post.rs  shadow_depth.rs  transparent.rs
crates/spawn-render/tests/: device.rs
crates/spawn-replication/: Cargo.toml  DESIGN.md
crates/spawn-replication/src/: client.rs  config.rs  error.rs  id.rs  interest.rs  interp.rs  lib.rs  markers.rs  predict.rs  registry.rs  role.rs  rpc.rs  server.rs  snapshot.rs  testcomp.rs  wire.rs
crates/spawn-replication/tests/: e2e.rs
crates/spawn-script/: Cargo.toml  DESIGN.md  README.md
crates/spawn-script/src/: component.rs  config.rs  engine.rs  entity_api.rs  error.rs  lib.rs  math_binding.rs  sandbox.rs  system.rs  value.rs
crates/spawn-script/tests/: runtime.rs
crates/spawn-serialize/: Cargo.toml  DESIGN.md
crates/spawn-serialize/src/: bits.rs  error.rs  geom.rs  lib.rs  pack.rs  stream.rs  transform.rs
crates/spawn-ui/: Cargo.toml  DESIGN.md  README.md
crates/spawn-ui/src/: draw.rs  error.rs  input.rs  layout.rs  lib.rs  style.rs  tree.rs  widgets.rs
crates/spawn-ui/tests/: zero_alloc.rs
games/fracture/: Cargo.toml
games/fracture/src/: audio.rs  ball.rs  brick.rs  components.rs  error.rs  field.rs  gameplay.rs  hud.rs  input.rs  levels.rs  lib.rs  main.rs  paddle.rs  physics.rs  powerup.rs  progression.rs  render.rs  resources.rs
games/fracture/tests/: integration.rs  units.rs
