[package]
name = "spawn-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
spawn-core = { path = "../spawn-core", version = "0.1.0" }
spawn-asset = { path = "../spawn-asset", version = "0.1.0" }
kira = { version = "0.10", default-features = false, features = ["cpal", "symphonia", "wav", "ogg"] }
