[package]
name = "spawn-editor-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
spawn-core = { path = "../spawn-core", version = "0.1.0" }
spawn-ecs = { path = "../spawn-ecs", version = "0.1.0" }
spawn-asset = { path = "../spawn-asset", version = "0.1.0" }
spawn-editor = { path = "../spawn-editor", version = "0.1.0" }
spawn-render = { path = "../spawn-render", version = "0.1.0" }
spawn-ui = { path = "../spawn-ui", version = "0.1.0" }
spawn-input = { path = "../spawn-input", version = "0.1.0" }
spawn-platform = { path = "../spawn-platform", version = "0.1.0" }

[dev-dependencies]
winit = { version = "0.30", default-features = false, features = ["x11", "rwh_06"] }
