[package]
name = "spawn-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
spawn-core = { path = "../spawn-core" }
winit = { version = "0.30", default-features = false, features = ["x11", "rwh_06"] }
# `pump_events` is part of winit's core API on desktop targets (no feature gate).
raw-window-handle = "0.6"
