[package]
name = "fracture"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
spawn-core = { path = "../../crates/spawn-core", version = "0.1.0" }
spawn-ecs = { path = "../../crates/spawn-ecs", version = "0.1.0" }
spawn-engine = { path = "../../crates/spawn-engine", version = "0.1.0" }
spawn-physics = { path = "../../crates/spawn-physics", version = "0.1.0" }
spawn-render = { path = "../../crates/spawn-render", version = "0.1.0" }
spawn-input = { path = "../../crates/spawn-input", version = "0.1.0" }
spawn-audio = { path = "../../crates/spawn-audio", version = "0.1.0" }
spawn-asset = { path = "../../crates/spawn-asset", version = "0.1.0" }
spawn-ui = { path = "../../crates/spawn-ui", version = "0.1.0" }
